--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "moment": "^2.27.0",
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-time-picker": "^4.0.1"
+    "react-time-picker": "^4.0.1",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
