--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-time-picker": "^4.0.1",
+    "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
